--- a/LEVEL 1/TASK 2/PORTFOLIO/index.html
+++ b/LEVEL 1/TASK 2/PORTFOLIO/index.html
@@ -258,7 +258,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">nandhankrishna66@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">nandhanakrishna66@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
